(chore): Made outside swagger file
